--- a/src/blocks/card/__button/_trash/card__button_trash.css
+++ b/src/blocks/card/__button/_trash/card__button_trash.css
@@ -10,3 +10,7 @@
   background-image: url('../../../../images/Trash.svg');
   position: absolute;
 }
+
+.card__button_trash_hidden{
+  display: none;
+}
